# Cool-Stuff

./: .gitignore
Format Contacts/: CMakeLists.txt  FileChecks.cpp  FileChecks.h  PersonInfo.cpp  PersonInfo.h  contacts.txt  contacts_formatted.txt  main.cpp
Runtime Table Of Repeated Words/: CMakeLists.txt  jb.txt  main.c
Table of Read Words/: CMakeLists.txt  jb.txt  main.c  main2.c  main3.c
WF - Tic Tac Toe/: WF - Tic Tac Toe.sln
WF - Tic Tac Toe/WF - Tic Tac Toe/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  WF - Tic Tac Toe.csproj
WF - Tic Tac Toe/WF - Tic Tac Toe/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
